2005-09-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlFormTest.cs: Trim() the rendered form when comparing (\n vs \r\n).

2005-09-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlInputButtonTest.cs: make sure the onclick attribute is rendered
	when we have a ServerClick event registered.

2005-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlAnchorCas.cs: Added "normal" unit tests execution under Deny 
	Unrestricted.
	* HtmlAnchorTest.cs: RaisePostBackEvent now throws a NRE under 2.0 RC.
	* HtmlButtonCas.cs: Added "normal" unit tests execution under Deny 
	Unrestricted.
	* HtmlContainerControlCas.cs: New. CAS unit tests.
	* HtmlFormCas.cs: Added "normal" unit tests execution under Deny 
	Unrestricted.
	* HtmlFormTest.cs: Fixed rendering output under 2.0 RC.
	* HtmlImageCas.cs: Added "normal" unit tests execution under Deny 
	Unrestricted.
	* HtmlInputButtonCas.cs: Added "normal" unit tests execution under 
	Deny Unrestricted.
	* HtmlInputButtonTest.cs: Fixed attribute count for 2.0 RC.
	* HtmlInputControlCas.cs: New. CAS unit tests.
	* HtmlInputControlTest.cs: Fixed attribute count for 2.0 RC.
	* HtmlInputCheckBoxCas.cs: Added "normal" unit tests execution under
	Deny Unrestricted.
	* HtmlInputCheckBoxTest.cs: Fixed attribute count for 2.0 RC (which is
	now identical to 1.x results).
	* HtmlInputFileCas.cs: Added "normal" unit tests execution under Deny 
	Unrestricted.
	* HtmlInputFileTest.cs: Fixed attribute count for 2.0 RC.
	* HtmlInputHiddenCas.cs: Fixed attribute count for 2.0 RC.
	* HtmlInputPasswordCas.cs: Added "normal" unit tests execution under 
	Deny Unrestricted.
	* HtmlInputPasswordTest.cs: Adjusted tests as 2.0 RC removed the 
	ctor(string).
	* HtmlInputRadioButtonCas.cs: Fixed attribute count for 2.0 RC.
	* HtmlInputRadioButtonTest.cs: Added "normal" unit tests execution 
	under Deny Unrestricted.
	* HtmlInputResetCas.cs: Added "normal" unit tests execution under Deny
	Unrestricted.